--- a/Harshithreddygangasani.github.io-master/projects.html
+++ b/Harshithreddygangasani.github.io-master/projects.html
@@ -299,7 +299,7 @@ add
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="main-heading mb-0 projects_head">My <span class="my_projects">Projects</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            My projects makes use of vast variety of latest technology tools. My best experience is to create Data Science projects and deploy them to web applications using cloud infrastructure.
+                          "I have extensive experience working with a wide range of cutting-edge technology tools. I specialize in developing both microservices and monolithic applications that are scalable and reliable. I excel in building continuous integration and continuous development pipelines, and I have a strong passion for creating automation solutions."
                         </p>
                     </div>
                 </div>
